[project]
name = "fastapi_app"
version = "0.1.0"
description = "main backend api"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "starlette>=1.0.0",
    "websocket-client>=1.9.0",
]
